@@ -94,10 +94,6 @@ select_init(struct event_base *base)
 {
 	struct selectop *sop;
 
-	/* Disable select when this environment variable is set */
-	if (getenv("EVENT_NOSELECT"))
-		return (NULL);
-
 	if (!(sop = mm_calloc(1, sizeof(struct selectop))))
 		return (NULL);
 
